// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrowContainer /> with \`borderColor\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #1CAFE1;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`borderRadius\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`borderWidth\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 3px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
  top: -0.9375rem;
  left: -1.25rem;
  border: 0.9375rem solid transparent;
  border-right-color: #eee;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`centered\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: calc(50% - 0.625rem);
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`color\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #ff0000;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #ff0000;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`distance\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.875rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`position\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  bottom: -1.25rem;
  left: 1.25rem;
  border-top-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`shadow\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with \`size\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 1.25rem solid transparent;
  top: 1.25rem;
  left: -2.5rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with default props matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<div
  className="c0"
>
  Foobar
  <span
    className="c1"
  />
</div>
`;

exports[`<ArrowContainer /> with other props matches with snapshot 1`] = `
.c0 {
  position: relative;
  padding: 1.25rem;
  background-color: #f6f6f6;
  border-radius: 0;
  box-sizing: border-box;
  border: 0px solid #eee;
  z-index: 1;
}

.c1 {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: 0.625rem solid transparent;
  top: 1.25rem;
  left: -1.25rem;
  border-right-color: #f6f6f6;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

<article
  className="c0 k-u-example-class"
  color="#f6f6f6"
>
  Foobar
  <span
    className="c1"
  />
</article>
`;
